subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/DefiniteAssign_Invalid_2.while
int f(int x) {
    x = x + y;
    return x;
}
